semi-automatic code cleanup